--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "binary": {
     "module_name": "serialport",
     "module_path": "build/{configuration}/",
-    "host": "https://github.com",
-    "remote_path": "/EmergingTechnologyAdvisors/node-serialport/releases/download/{version}"
+    "host": "https://github.com/EmergingTechnologyAdvisors/node-serialport/releases/download/",
+    "remote_path": "{version}"
   },
   "main": "./lib/serialport",
   "repository": {
